third_party/move/move-compiler-v2/tests/checking/control_flow/loop_labels_check_err.move
module 0x815::test {
    fun undefined_label() {
        break 'outer;
        'outer: loop {
            break 'inner
        }
    }

    fun duplicate_label() {
        'l1: loop {};
        'l1: loop 'l1: loop {};
        'l1: loop {}
    }
}
